initial implementation of the new build system

--- a/test/templates/site/content-slides.Rmd
+++ b/test/templates/site/content-slides.Rmd
@@ -1,10 +1,13 @@
 ---
 title:  {{title}}
-site:   courseR::courseRsite
 output: 
   revealjs::revealjs_presentation: 
     incremental: true
     center:      true
 ---
 
-{{rmd}}
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(cache = TRUE)
+```
+
+{{content}}
