--- a/test/01-sample.Rmd
+++ b/test/01-sample.Rmd
@@ -1,11 +1,7 @@
 ---
-title:  {{title}}
+title:  Sample 1
 type:   content
 ---
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
 
 # R Markdown
 
@@ -39,3 +35,7 @@ down...
 ## This will go down again
 
 ...floor!
+
+# Large blocks of text go away by default
+
+This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>. This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>. This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>. 
