new build pipeline complete

--- a/inst/project-template/templates/site/task-collector.Rmd
+++ b/inst/project-template/templates/site/task-collector.Rmd
@@ -1,4 +1,4 @@
 ```{r knitr_options, echo=FALSE, cache=FALSE}
-chunk <- knitr::knit_hooks$get('chunk')
-knitr::knit_hooks$set(chunk = courseR::taskCollector(callback = chunk, assignment = "{{assignment}}", rds = "{{chunkrds}}"))
+{{hook}} <- knitr::knit_hooks$get('{{hook}}')
+knitr::knit_hooks$set({{hook}} = courseR::taskCollector(callback = {{hook}}, assignment = "{{assignment}}", rds = "{{rds}}"))
 ```
