pre-task collector refactor

--- a/inst/project-template/templates/site/assignment-tasks.Rmd
+++ b/inst/project-template/templates/site/assignment-tasks.Rmd
@@ -1,7 +1,8 @@
 ---
 title:      "{{title}}"
-output:     html_document
-assignment: "{{assignment}}"
+output:
+  {{build.package.name}}::assignment:
+    assignment: "{{assignment}}"
 ---
 
 {{tasks}}
