near (incomplete) implementations for the first live days of the dependant site biol-185

--- a/inst/project-template/templates/site/assignment-tasks.Rmd
+++ b/inst/project-template/templates/site/assignment-tasks.Rmd
@@ -1,8 +1,7 @@
 ---
 title:      "{{title}}"
-output:
-  {{build.package.name}}::assignment:
-    assignment: "{{assignment}}"
+output:     {{build.package.name}}::assignment
+assignment: "{{assignment}}"
 ---
 
 {{tasks}}
