firt pass at back-porting experimental extensions from Bio-185 2017.

--- a/inst/project-template/templates/site/content.Rmd
+++ b/inst/project-template/templates/site/content.Rmd
@@ -36,6 +36,6 @@ down...
 
 ...floor!
 
-# Large blocks of text go away by default
+## Large blocks of text are removed by default
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>. This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>. This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
