--- a/inst/project-template/templates/init/index.Rmd
+++ b/inst/project-template/templates/init/index.Rmd
@@ -6,22 +6,7 @@ title:  {{name}}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## Index page
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+This template will be used to make the website's default landing page (`index.html`).
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
